# Porjet_C

./: .gitignore  CMakeLists.txt  Makefile  Porjet_C  combat.c  combat.h  deathScreen.c  deathScreen.h  destroy.c  destroy.h  fileReader.c  fileReader.h  fileWriter.c  fileWriter.h  func.c  func.h  game.c  game.h  hello_sdl  hello_sdl.c  init.c  init.h  lifeCycle.c  lifeCycle.h  main.c  monstres.c  monstres.h  setGet.c  setGet.h  splashScreen.c  splashScreen.h  struct.h  visual.c  visual.h
files/armors/: anneau  bottes  casque  hermes_boots  louboutins  plastron  rabadon_deathcap  tunic  warmog  yoga_pants
files/monsters/: bat  ghoul  goblin  orc  skeleton  slime  troll  werewolf  wyvern  zombie
files/players/: AlexOWO  Alexis
files/skills/: arcanbolt  blast  earthquake  fireball  icelance  lightbeam  nuke  poisoncloud  shadowfade  thunderstrike  windlash
files/weapons/: BFsword  admin  axe  bat  bow  club  crossbow  dagger  flail  mace  spear
